--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "heroku-env": "^0.2.0",
     "include-all": "~0.1.3",
     "node-uuid": "^1.4.1",
+    "parse-database-url": "^0.2.0",
     "rc": "~0.3.3",
     "sails": "~0.10.0-rc7",
     "sails-disk": "~0.10.0",
