--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bluebird": "^1.2.4",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
@@ -16,6 +17,8 @@
     "grunt-contrib-less": "~0.10.0",
     "grunt-contrib-uglify": "~0.4.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-ng-annotate": "^0.2.2",
+    "grunt-ng-constant": "^0.5.0",
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "heroku-env": "^0.2.0",
