--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bluebird": "^1.2.4",
     "dotenv": "^0.2.8",
     "ejs": "~0.8.4",
+    "express-jwt": "^0.2.1",
     "grunt": "0.4.2",
     "grunt-angular-templates": "^0.5.5",
     "grunt-contrib-clean": "~0.5.0",
@@ -25,12 +26,16 @@
     "grunt-sync": "~0.0.4",
     "heroku-env": "^0.2.0",
     "include-all": "~0.1.3",
+    "install": "^0.1.7",
+    "jsonwebtoken": "^0.4.0",
     "node-uuid": "^1.4.1",
+    "npm": "^1.4.13",
     "parse-database-url": "^0.2.0",
     "rc": "~0.3.3",
     "sails": "~0.10.0-rc7",
     "sails-disk": "~0.10.0",
-    "sails-postgresql": "^0.10.0-rc3"
+    "sails-postgresql": "^0.10.0-rc3",
+    "socketio-jwt": "^2.0.2"
   },
   "scripts": {
     "start": "node app.js",
