--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "bcrypt": "^0.7.8",
     "bluebird": "^1.2.4",
     "dotenv": "^0.2.8",
     "ejs": "~0.8.4",
